--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,9 @@
     <string name="nav_menu_feed">Лента</string>
     <string name="nav_menu_create_post">Создать</string>
     <string name="nav_menu_profile">Профиль</string>
+    <string name="email">Email</string>
+    <string name="password">Пароль</string>
+    <string name="enter">Войти</string>
     <string name="bio_tell_about_yourself">Расскажи о себе</string>
     <string name="continue_option">Продолжить</string>
     <string name="bio_enter">Введите bio</string>
